--- a/WebApplication5/Views/Home/Index.cshtml
+++ b/WebApplication5/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <thead >
                 <tr>
                     <th>#</th>
-                    <th>Id</th>
+                    <th>Leen Change xoxo</th>
                     <th>Name</th>
                     <th>password</th>
                 </tr>
